fix(SignIn) : fix z-index bug
- fix align container
- fix z-index bug

--- a/app/components/SignIn/style.less
+++ b/app/components/SignIn/style.less
@@ -5,4 +5,11 @@
     padding: 6px 20px 30px;
     background-color: #F8F8F8;
     min-height: 100vh;
+    padding-top: 150px; 
+}
+
+.container {
+	display: table;
+  margin: 0 auto;
+	text-align: center;
 }
